fable/test/valid/add_real_integer.f
      program prog
      c=a+i
      end
