fable/test/syntax_error/j_assign_i_percent_5.f
      program prog
      j = i % 5
      end
